fix: fix some bug in org structure